fix: overflow: auto for contactSlide

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -66,7 +66,7 @@
   top: 20dvh;
   margin-inline: 8vmax;
   animation-fill-mode: forwards;
-  overflow: scroll;
+  overflow: auto;
 }
 @media (max-width: 1170px) {
   .contactSlide {
